@@ -1,6 +1,9 @@
 # ChangeLog for app-shells/esh
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/esh/ChangeLog,v 1.9 2004/01/30 20:01:12 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/esh/ChangeLog,v 1.10 2004/06/02 14:53:16 agriffis Exp $
+
+  02 Jun 2004; Aron Griffis <agriffis@gentoo.org> esh-0.8.5.ebuild:
+  Make clean on all arches, not just non-x86, so we can rebuild with our CFLAGS
 
   30 Jan 2004; <gustavoz@gentoo.org> esh-0.8.5.ebuild:
   stable on sparc
